--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "postcss": "^8.3.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^1.0.1",
     "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@types/react": "^17.0.15",
     "classnames": "^2.3.1",
     "eslint": "7.32.0",
