--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "autoprefixer": "^10.3.1",
-    "axios": "^0.21.1",
-    "date-js": "^2.0.0",
-    "dayjs": "^1.10.6",
-    "next": "11.0.1",
-    "postcss": "^8.3.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "swr": "^1.0.1",
-    "tailwindcss": "^2.2.7"
-  },
-  "devDependencies": {
-    "@svgr/webpack": "^5.5.0",
-    "@types/react": "^17.0.15",
-    "classnames": "^2.3.1",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1",
-    "next-react-svg": "^1.1.3",
-    "typescript": "^4.3.5"
-  }
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.15.4",
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@fortawesome/react-fontawesome": "^0.1.16",
+		"autoprefixer": "^10.3.1",
+		"axios": "^0.21.1",
+		"date-js": "^2.0.0",
+		"dayjs": "^1.10.6",
+		"next": "11.0.1",
+		"postcss": "^8.3.6",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"swr": "^1.0.1",
+		"tailwindcss": "^2.2.7"
+	},
+	"devDependencies": {
+		"@svgr/webpack": "^5.5.0",
+		"@types/react": "^17.0.15",
+		"classnames": "^2.3.1",
+		"eslint": "7.32.0",
+		"eslint-config-next": "11.0.1",
+		"file-loader": "^6.2.0",
+		"next-react-svg": "^1.1.3",
+		"typescript": "^4.3.5"
+	}
 }
